fix stack opration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,31 +14,6 @@
         "vector": "cpp",
         "sstream": "cpp",
         "streambuf": "cpp",
-        "tuple": "cpp",
-        "atomic": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "memory_resource": "cpp",
-        "system_error": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "limits": "cpp",
-        "new": "cpp",
-        "stdexcept": "cpp",
-        "typeinfo": "cpp",
-        "cstring": "cpp"
+        "tuple": "cpp"
     }
 }
