--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "type": "cppdbg", // 配置类型，这里只能为cppdbg
             "request": "launch", // 请求配置类型，可以为launch（启动）或attach（附加）
             "program": "${fileDirname}/${fileBasenameNoExtension}.exe", // 将要进行调试的程序的路径
-            "args": ["./bin","255","255"], // 程序调试时传递给程序的命令行参数，一般设为空即可
+            "args": [], // 程序调试时传递给程序的命令行参数，一般设为空即可
             "stopAtEntry": false, // 设为true时程序将暂停在程序入口处，我一般设置为true
             "cwd": "${workspaceFolder}", // 调试程序时的工作目录
             "environment": [], // （环境变量？）
